SteveHorses OLD/Steve PRO OLD/logs/targets_20250901_013825.log
  File "/Users/stephenjerome/Desktop/SteveHorsesPro/steve_horses_pro.py", line 1
    /Users/stephenjerome/Desktop/SteveHorsesPro/outputs/2025-09-01_horses_targets.html
    ^
SyntaxError: invalid syntax
